@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-32: Implement benchmarks to evaluate the performance of message 
+  passing. (hyunsik)
+
   GIRAPH-34: Failure of Vertex reflection for putVertexList from
   GIRAPH-27. (aching)
 
